# ScingOS

./: .editorconfig  .env.example  .env.local  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  ANDROID_BUILD_UNBLOCKED_STATUS.md  ANDROID_GRADLE_JAR_RESOLUTION.md  ARCHITECTURE.md  CB_ANDROID_RUNTIME_TRUTH_CAPTURE.ps1  CB_FIREBASE_DATACONNECT_FIX_SCINGULAR_AI_WIN10.cmd  CB_FIREBASE_DATACONNECT_FIX_SCINGULAR_AI_WIN10.ps1  CB_FIREBASE_DATACONNECT_INIT_WIN10.cmd  CB_FIREBASE_DATACONNECT_VERIFY_AND_ACTIVATE_WIN10.cmd  CB_FIREBASE_DATACONNECT_VERIFY_AND_ACTIVATE_WIN10.ps1  CB_FIREBASE_LINK_AND_INIT_DATACONNECT_WIN10.cmd  CB_FIREBASE_SET_PROJECT_AND_INIT_DATACONNECT_WIN10.cmd  CB_NOTE20_INSTALL_AND_LAN_SEND_HARDGATE.ps1  CB_NOTE20_LAN_SEND_VALIDATION.ps1  CB_SCINGGPT_APP_DEVELOPMENT.md  CB_SCINGR_REMOTE_BOOTSTRAP_ELECTRON_WIN10.ps1  CB_SCINGR_SRT_INTEGRATION_WIN10.ps1  CB_SPECTROCAP_TEMP_RECEIVER.ps1  CB_SPECTROCAP_URLACL_AND_FIREWALL_WIN10.cmd  CB_VSC_RUN_SCINGR_WIN10.ps1  CHANGELOG.md  CHATGPT-ACCESS.md  CLAUDE_HAIKU_ENABLEMENT.md  CODE_OF_CONDUCT.md  COMMAND_CENTRAL_LOCK.md  CONTRIBUTING.md  COPYRIGHT  HTTPS_ANDROID_IMPLEMENTATION_SUMMARY.md  HTTPS_BUILD_STATUS_2026-01-29.md  LEGAL.md  LICENSE  (+61 more)
apps/windows/: Cargo.toml  package.json
apps/windows/spectrocap-win/: .env.example  README.md  index.html  package-lock.json  package.json  smoke-test.sh
apps/windows/spectrocap-win/src/: app.ts  clipboard.ts  device.ts  deviceManager.ts  deviceManagerUI.ts  firebase.ts  historyStore.ts  lariCap.ts  main.ts  media.ts  (+2 more)
apps/windows/spectrocap-win/src-tauri/: tauri.conf.json  tauri.conf.json.bak.20260128_162736
apps/windows/spectrocap-windows/: README.md
apps/windows/src/: clipboard.rs  commands.rs  db.rs  hotkey.rs  lib.rs  main.rs
(+27401 files in other folders)
