[package]
name = "scing-remote-paste"
version = "1.0.0-alpha"
edition = "2021"
rust-version = "1.70"

[lib]
name = "scing_remote_paste_lib"
path = "src/lib.rs"

[[bin]]
name = "scing-remote-paste"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.5", features = [
    "dialog-open",
    "dialog-save",
    "shell-open",
    "system-tray",
    "macos-private-api",
    "window-close",
    "window-hide",
    "window-show",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "uuid"] }
enigo = "0.1"
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
clipboard-win = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
