[package]
# Force GUI subsystem (no console window)
windows_subsystem = "windows"
name = "scing-emulator-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

